# aoc2023

./: .gitignore  README.md  commit_push.bat  pyproject.toml  pytest.ini  requirements.txt
.run/: part1.run.xml  part2.run.xml  pytest in part1.py.run.xml  pytest in part2.py.run.xml
day00/: part1.py
day01/: part1.py  part2.py
day02/: part1.py  part2.py
day03/: part1.py  part2.py
day04/: part1.py  part2.py
day05/: part1.py
day06/: part1.py  part2.py
day07/: part1.py  part2.py
day08/: part1.py  part2.py
day09/: part1.py  part2.py
day10/: part1.py  part2.py
day11/: part1.py  part2.py
day12/: part1.py  part2.py
day13/: part1.py  part2.py
day14/: part1.py  part2.py
day15/: part1.py  part2.py
day16/: part1.py  part2.py
support/: pyproject.toml  support.py
