[project]
name = "aoc2023"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "networkx>=3.4.2",
    "pytest~=7.4.3",
    "shapely~=2.0.2",
]

[tool.uv.sources]
support = { path = "support" }

[dependency-groups]
actions = [
    "pillow>=11.1.0",
    "selenium>=4.27.1",
]
